plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.3'
	id 'io.spring.dependency-management' version '1.1.3'
	id 'org.graalvm.buildtools.native' version '0.9.24'
}

group = 'bootiful'
version = '0.0.1-SNAPSHOT'



java {
	sourceCompatibility = '21'
}

graalvmNative {

	binaries {
		main {
			buildArgs.add('--enable-preview')
		}
	}
}

java {
	toolchain { languageVersion = JavaLanguageVersion.of(21) }
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/snapshot' }
	maven { url 'https://repo.spring.io/milestone' }
}




dependencies {

	implementation 'org.springframework.boot:spring-boot-starter'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
